# TodoProject

app/: CMake.txt  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  cpp2.c  cpp2.h  cpp3.c  ffempgutil.c  ffempgutil.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: common.h  old_pix_fmts.h
app/src/main/java/com/iwintrue/todoproject/: MainActivity.java
app/src/main/java/com/iwintrue/todoproject/ndk/: FFemPegActivity.java  FfmUtils.java  JNI.java  JNI2.java  JavaStruct.java  JniUtils.java  Main2Activity.java
app/src/main/java/com/iwintrue/todoproject/wallpaper/: CameraLiveWallpaper.java  WallPaperActivity.java
app/src/main/jnindkbuild/: simplest_ffmpeg_decoder.c
app/src/main/res/layout/: activity_ffem_peg.xml  activity_main.xml  activity_main2.xml  wallpaper.xml
gradle/wrapper/: gradle-wrapper.properties
